<resources>
    <string name="app_name">EdLis</string>
    <string name="tab_text_1">1</string>
    <string name="tab_text_2">2</string>
    <string name="tab_text_3">3</string>
    <string name="tab_text_4">4</string>
    <string name="tab_text_5">5</string>
    <string name="tab_text_6">6</string>
    <string name="tab_text_7">7</string>
    <string name="tab_text_8">8</string>
    <string name="tab_text_9">9</string>
    <string name="tab_text_10">10</string>
    <string name="rb_a">A</string>
    <string name="rb_b">B</string>
    <string name="rb_c">C</string>
    <string name="rb_d">D</string>
    <string name="rb_e">E</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_exam_result">ExamResult</string>
    <string name="exam">Exam</string>
    <string name="time">Time</string>
</resources>
